--- a/index.html
+++ b/index.html
@@ -34,38 +34,38 @@
             <div id="header">
 
                 <div class="util">
-                    <i class="fa fa-search"> Search</i>
+                    <i class="fa fa-search">Search</i>
                     <i class="fa fa-tags"> Offers</i>
                     <i class="fa fa-cart-plus" id="cart-plus"> 0 Items</i>
                 </div>
             </div>
             <div id="food-items" class="d-food-items">
-                <div id="biryani" class="d-biryani">
-                    <p id="category-name">Biryani</p>    
+                <div id="Burger" class="d-burger">
+                    <p id="category-name">Burger</p>    
                 </div>
 
-                <div id="chicken" class="d-chicken">
-                    <p id="category-name">Chicken Delicious</p>    
+                <div id="Burrito" class="d-burrito">
+                    <p id="category-name">Burrito</p>    
                 </div>
 
-                <div id="paneer" class="d-paneer">
-                    <p id="category-name">Paneer Mania</p>
+                <div id="Desserts" class="d-desserts">
+                    <p id="category-name">Desserts</p>
                 </div>
 
-                <div id="vegetable" class="d-vegetable">
-                    <p id="category-name">Pure Veg Dishes</p> 
+                <div id="Donuts" class="d-donuts">
+                    <p id="category-name">Donuts</p> 
                 </div>
 
-                <div id="chinese" class="d-chinese">
-                    <p id="category-name">Chinese Corner</p> 
+                <div id="Pizza" class="d-pizza">
+                    <p id="category-name">Pizza</p> 
                 </div>
 
-                <div id="south-indian" class="d-south-indian">
-                    <p id="category-name">South Indian</p>
+                <div id="Salad" class="d-salad">
+                    <p id="category-name">Salad</p>
                 </div>
 
-                <div id="pizza" class="d-pizza">
-                    <p id="category-name">Pizza</p>
+                <div id="Sandwich" class="d-sandwich">
+                    <p id="category-name">Sandwich</p>
                 </div>
             </div>
 
@@ -107,26 +107,30 @@
 
     <div class="item-container">
         <div class="category-header" id="category-header">  
-        </div>
+    </div>
 
         <div id="food-items" class="food-items">
-            <div id="biryani" class="m-biryani">
-                <p id="category-name">Biryani</p>    
+            <div id="Burger" class="m-burger">
+                <p id="category-name">Burger</p>    
             </div>
-            <div id="chicken" class="m-chicken">
-                <p id="category-name">Chicken Delicious</p>    
+            <div id="Burrito" class="m-burrito">
+                <p id="category-name">Burrito</p>    
             </div>
-            <div id="paneer" class="m-paneer">
-                <p id="category-name">Paneer Mania</p>
+
+            <div id="Desserts" class="m-desserts">
+                <p id="category-name">Desserts</p> 
             </div>
-            <div id="vegetable" class="m-vegetable">
-                <p id="category-name">Pure Veg Dishes</p> 
+            <div id="Donuts" class="m-donuts">
+                <p id="category-name">Donuts</p> 
             </div>
-            <div id="chinese" class="m-chinese">
-                <p id="category-name">Chinese Corner</p> 
+            <div id="Pizza" class="m-pizza">
+                <p id="category-name">Pizza</p>
             </div>
-            <div id="south-indian" class="m-south-indian">
-                <p id="category-name">South Indian</p>
+            <div id="Salad" class="m-salad">
+                <p id="category-name">Salad</p>
+            </div>
+            <div id="Sandwich" class="m-sandwich">
+                <p id="category-name">Sanwich</p>
             </div>
         </div> 
     </div>
